--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
-<html lang="es-419" class="min">
+<html lang="es-419" class="spacing-1">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Prototipo ECO217.01</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-    html.min {
-      font-size: 12px;
-      font-family: sans-serif;
-      color-scheme: light dark;
-      background-color-scheme: light dark;
-    }
-    body {
-      margin: 0;
-      display: grid;
-      grid-template-areas:
-        "header header header"
-        "nav main main"
-        "footer footer footer";
-    }
-    header {
-      grid-area: header;
-    }
-    nav {
-      grid-area: nav;
-      max-width: 200px;
-    }
-    main {
-      grid-area: main;
-    }
-    footer {
-      grid-area: footer;
-    }
-    aside {
-      grid-area: aside;
-      display: none
+    /* DISEÑO */
+    tabs-section {
+      align-items: center;
+      border-bottom: 1px solid var(--border-color);
+      display: flex;
+      gap: 0rem;
+
+      &:not(:hover) {
+        a:not(.on) {
+          opacity: .5;
+        }
+      }
+
+      a {
+        display: block;
+        transform: translateY(1px);
+        padding: var(--padding-xy);
+
+        &.on,
+        &:hover {
+          color: var(--color-primary);
+        }
+
+        &.on {
+          box-shadow: 0px -1px 0 0px var(--color-primary) inset;
+        }
+      }
     }
   </style>
 </head>
@@ -49,7 +44,10 @@
     <ul>
       <li><a href="#"><icon-custom>🏠</icon-custom><span>Inicio</span></a></li>
       <li>
-        <a href="#"><icon-custom>📄</icon-custom><span>Cursos</span></a>
+        <a href="#" data-notification="+99">
+          <i>📄</i>
+          <span>Cursos</span>
+        </a>
         <ul>
           <li><a href="#"><icon-custom>📋</icon-custom><span>Cursos</span></a></li>
           <li><a href="#"><icon-custom>📋</icon-custom><span>Materias</span></a></li>
@@ -72,41 +70,16 @@
     </ul>
   </nav>
   <main>
-    <style>
-      main:has(:not(input[type="checkbox"]:checked)) section-item-selected {
-        display: none;
-      }
-    </style>
     <header-table>
-      <style>
-        header-table {
-          section {
-            align-items: center;
-            display: flex;
-            gap: 1rem;
-            justify-content: space-between;
-          }
-        }
-      </style>
-      <section>
+      <tabs-section>
+        <a href="#" class="on">Pestaña 1</a>
+        <a href="#">Pestaña 2</a>
+        <a href="#">Pestaña 3</a>
+        <a href="#">Pestaña 4</a>
+        <a href="#">Pestaña 5</a>
+      </tabs-section>
+      <section-default>
         <nav-breadcrumb>
-          <style>
-            nav-breadcrumb {
-              ul {
-                display: flex;
-                gap: 0.5rem;
-                list-style: none;
-                padding: 0;
-                margin: 0;
-                li:not(:last-child) {
-                  &:after {
-                    margin-left: 0.5rem;
-                    content: '>';
-                  }
-                }
-              }
-            }
-          </style>
           <nav>
             <ul>
               <li><a href="#">Nuevo</a></li>
@@ -117,24 +90,34 @@
           </nav>
         </nav-breadcrumb>
         <input type="search">
-        <section>
-          <button type="button">✂️</button>
-          <button type="button">📋</button>
-          <button type="button">📄</button>
-          <details>
-            <summary>➕</summary>
-            <div>
-              <div><button type="button">📝</button></div>
-              <div><button type="button">📂</button></div>
-              <div><button type="button">📁</button></div>
-            </div>
-          </details>
-        </section>
-      </section>
+        <button-group class="min">
+          <button type="button">
+            <i>⭐</i>
+            <span>Favoritos</span>
+          </button>
+          <button type="button">
+            <i>⭐</i>
+            <span>Favoritos</span>
+          </button>
+          <button type="button">
+            <i>⭐</i>
+            <span>Favoritos</span>
+          </button>
+          <button type="button">
+            <i>⭐</i>
+            <span>Favoritos</span>
+          </button>
+          <button type="button">
+            <i>⭐</i>
+            <span>Favoritos</span>
+          </button>
+        </button-group>
+      </section-default>
       <section-item-selected>
         <style>
           section-item-selected {
             display: flex;
+            display: none;
             gap: 1rem;
           }
         </style>
@@ -147,49 +130,30 @@
         </section>
       </section-item-selected>
     </header-table>
-    <style>
-      table {
-        width: 100%;
-        border-collapse: collapse;
-        th, td {
-          border: none;
-        }
-        tbody {
-          tr {
-            &:nth-child(odd) {
-              background-color: rgba(255, 255, 255, 0.10);
-            }
-            &:not(:hover) {
-              td:last-child {
-                section {
-                  display: none;
-                }
-              }
-            }
-            td:last-child {
-              position: relative;
-              section {
-                position: absolute;
-                top: 50%;
-                transform: translate(0, -50%);
-                display: flex;
-                gap: 0.5rem;
-                right: 0;
-                button {
-                  padding: 0;
-                }
-              }
-            }
-          }
-        }
-      }
-    </style>
+
     <table>
+      <colgroup>
+        <col style="width: 14px">
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+        <col>
+      </colgroup>
       <thead>
         <tr>
           <th><input type="checkbox"></th>
           <th><span>Icon</span></th>
-          <th><span>Nombre</span></th>
+          <th>
+            <span>Nombre</span>
+            <button type="button">🔼</button>
+            <button type="button">🔽</button>
+            <button type="button">🔍</button>
+          </th>
           <th><span>Descripción</span></th>
           <th><span>Etiquetas</span></th>
           <th><span>Fecha de creación</span></th>
@@ -202,19 +166,19 @@
       <tbody>
         <tr>
           <td><input type="checkbox"></td>
-          <td><span>🖼️</span></td>
-          <td><span contenteditable="true">Introducción a CSS</span></td>
-          <td><span>Sintax, Conceptos y Estructura de CSS</span></td>
+          <td>🖼️</td>
+          <td>Introducción a CSS</td>
+          <td>Sintax, Conceptos y Estructura de CSS</td>
           <td>
             <span>Frontend</span>
             <span>Básico</span>
             <span>Web</span>
             <span>Programación</span>
           </td>
-          <td><span>Fecha de creación</span></td>
-          <td><span>Fecha de edición</span></td>
-          <td><span>Usuario</span></td>
-          <td><span>Estatus</span></td>
+          <td>Fecha de creación</td>
+          <td>Fecha de edición</td>
+          <td>Usuario</td>
+          <td>Estatus</td>
           <td>
             <section>
               <button type="button">🖋️</button>
@@ -240,22 +204,71 @@
     footer
   </footer>
   <aside>
+    <resize-parent data-rezise-to="left">
+      <style>
+        aside {
+          position: relative;
+        }
+
+        resize-parent {
+          background-color: royalblue;
+          border-radius: 1rem;
+          cursor: ew-resize;
+          height: 100%;
+          left: -0.25rem;
+          max-height: 100vh;
+          opacity: 0;
+          position: absolute;
+          top: 0;
+          transform-origin: center center;
+          transform-style: .5s;
+          width: 0.5rem;
+
+          &:hover {
+            opacity: 1;
+            width: .75rem;
+          }
+        }
+      </style>
+    </resize-parent>
     <form>
-      <label>
-        <span>Nombre</span>
-        <input type="text">
-      </label>
-      <label>
-        <span>Descripción</span>
-        <input type="search">
-      </label>
-      <label>
-        <span>Etiquetas</span>
-        <span>Etiqueta 1</span>
-        <span>Etiqueta 2</span>
-        <span>Etiqueta 3</span>
-        <span>Etiqueta 4</span>
-      </label>
+      <details open>
+        <summary>
+          <span>Información</span>
+        </summary>
+        <article>
+          <p>
+            <label>
+              <span>Densidad</span>
+              <select>
+                <option>Normal</option>
+              </select>
+            </label>
+          </p>
+          <p>
+            <label>
+              <span>Estilo</span>
+              <select>
+                <option>Circulo</option>
+                <option>Redondeado</option>
+                <option>Normal</option>
+                <option>Radius</option>
+              </select>
+            </label>
+          </p>
+          <p>
+            <label>
+              <span>Espaciado</span>
+              <select id="select_spacing">
+                <option value="0">Minino</option>
+                <option value="1" selected>Compacto</option>
+                <option value="2">Normal</option>
+                <option value="3">Comodo</option>
+              </select>
+            </label>
+          </p>
+        </article>
+      </details>
     </form>
     <img src="https://lorempixel.com/80/80" altvb="">
     <img src="https://lorempixel.com/80/80?x=1vb" alt="">
@@ -280,5 +293,27 @@
     <img src="https://lorempixel.com/80/80?x=111" alt="">
     <img src="https://lorempixel.com/80/80?x=11" alt="">
   </aside>
+  <script>
+    const duplicateTR = (tr) => {
+      const clone = tr.cloneNode(true);
+      tr.after(clone);
+    }
+    const generateTR = (totalRows) => {
+      const tbody = document.querySelector('tbody');
+      const tr = tbody.querySelector('tr');
+      for (let i = 0; i < totalRows; i++) {
+        duplicateTR(tr);
+      }
+    }
+    generateTR(25);
+
+    const $selectSpacing = document.querySelector('#select_spacing');
+    const $html= document.querySelector('html');
+    $selectSpacing.addEventListener('change', (event) => {
+      const value = event.target.value;
+      $html.attributes.removeNamedItem('class');
+      $html.classList.add('spacing-' + value);
+    });
+  </script>
 </body>
 </html>
