chore: Actualizar navegación de migas de pan en index.html

--- a/index.html
+++ b/index.html
@@ -80,14 +80,9 @@
       </tabs-section>
       <section-default>
         <nav-breadcrumb>
-          <nav>
-            <ul>
-              <li><a href="#">Nuevo</a></li>
-              <li><a href="#">Editar</a></li>
-              <li><a href="#">Exportar</a></li>
-              <li><a href="#">Importar</a></li>
-            </ul>
-          </nav>
+          <a href="#"><span>Inicio</span></a>
+          <a href="#"><span>Cursos</span></a>
+          <a href="#"><span>Materias</span></a>
         </nav-breadcrumb>
         <input type="search">
         <button-group class="min">
@@ -270,28 +265,6 @@
         </article>
       </details>
     </form>
-    <img src="https://lorempixel.com/80/80" altvb="">
-    <img src="https://lorempixel.com/80/80?x=1vb" alt="">
-    <img src="https://lorempixel.com/80/80?x=1" alt="">
-    <img src="https://lorempixel.com/80/80?x=v1" alt="">
-    <img src="https://lorempixel.com/80/80?x=1v" alt="">
-    <img src="https://lorempixel.com/80/80?x=1vc" alt="">
-    <img src="https://lorempixel.com/80/80?x=1x" alt="">
-    <img src="https://lorempixel.com/80/80?x=1wq" alt="">
-    <img src="https://lorempixel.com/80/80?x=1a" alt="">
-    <img src="https://lorempixel.com/80/80?x=11" alt="">
-    <img src="https://lorempixel.com/80/80?x=10" alt="">
-    <img src="https://lorempixel.com/80/80?x=19" alt="">
-    <img src="https://lorempixel.com/80/80?x=18" alt="">
-    <img src="https://lorempixel.com/80/80?x=17" alt="">
-    <img src="https://lorempixel.com/80/80?x=132" alt="">
-    <img src="https://lorempixel.com/80/80?x=11" alt="">
-    <img src="https://lorempixel.com/80/80?x=17781" alt="">
-    <img src="https://lorempixel.com/80/80?x=11232" alt="">
-    <img src="https://lorempixel.com/80/80?x=1231" alt="">
-    <img src="https://lorempixel.com/80/80?x=2221" alt="">
-    <img src="https://lorempixel.com/80/80?x=111" alt="">
-    <img src="https://lorempixel.com/80/80?x=11" alt="">
   </aside>
   <script>
     const duplicateTR = (tr) => {
