feat: Actualizar estilos CSS para formularios y tema
Se actualizaron los estilos CSS para mejorar la apariencia y el diseño de los formularios en el sitio web. Además, se agregó un nuevo tema "Programar" para permitir a los usuarios programar el cambio de tema del sitio. Los estilos se aplican a través de selectores de clase y se definen variables CSS personalizadas para permitir la personalización fácil en el futuro.

--- a/index.html
+++ b/index.html
@@ -478,30 +478,40 @@
   <aside>
     <resize-parent data-rezise-to="left"></resize-parent>
     <form>
-      <fieldset data-mode="icon">
-        <legend>Aspecto</legend>
-        <label>
-          <span class="btn min">
-            <i>💻</i>
-            <span>Sistema</span>
-          </span>
-          <input type="radio" name="mode" value="system">
-        </label>
-        <label>
-          <span class="btn min">
-            <i>☀️</i>
-            <span>Light</span>
-          </span>
-          <input type="radio" name="mode" value="light">
-        </label>
-        <label>
-          <span class="btn min">
-            <i>🌙</i>
-            <span>Oscuro</span>
-          </span>
-          <input type="radio" name="mode" value="dark">
-        </label>
-      </fieldset>
+      <details open>
+        <summary>Tema</summary>
+        <fieldset data-mode="icon">
+          <legend>Aspecto</legend>
+          <label>
+            <span class="btn min">
+              <i>💻</i>
+              <span>Sistema</span>
+            </span>
+            <input type="radio" name="mode" value="system" checked>
+          </label>
+          <label>
+            <span class="btn min">
+              <i>☀️</i>
+              <span>Claro</span>
+            </span>
+            <input type="radio" name="mode" value="light">
+          </label>
+          <label>
+            <span class="btn min">
+              <i>🌙</i>
+              <span>Oscuro</span>
+            </span>
+            <input type="radio" name="mode" value="dark">
+          </label>
+          <label>
+            <span class="btn min">
+              <i>⏲️</i>
+              <span>Programar</span>
+            </span>
+            <input type="radio" name="mode" value="dark">
+          </label>
+        </fieldset>
+      </details>
       <details open>
         <summary>
           <span>Información</span>
